recycler view + fragment + settings activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hurtownia"
+        android:name="com.hurtownia.Hurtownia"
         tools:targetApi="31">
         <activity
-            android:name=".ProductEmployeeActivity"
+            android:name=".activities.ProductsEmployeeActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
